--- a/README
+++ b/README
@@ -1,3 +1,20 @@
 Read the documentation in qemu-doc.html or on http://wiki.qemu-project.org
 
 - QEMU team
+
+
+#Choose branch virtnet-loopback
+
+#View my patch:
+
+https://github.com/xhjcehust/qemu-virtnet-loopback/commit/fcb03374ae7e6e913b03a0b2c630b5d6f540c15d
+
+#manual
+
+git clone https://github.com/xhjcehust/qemu-virtnet-loopback.git
+
+git checkout remotes/origin/virtnet-loopback
+
+#For more details:
+
+http://blog.csdn.net/xhjcehust/article/details/39136105
